# pr-coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
dashboard/: index.html
src/: __init__.py  container.py  main.py
src/analyzers/: __init__.py  description_analyzer.py  diff_analyzer.py  pr_scorer.py  title_analyzer.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/api/middleware/: __init__.py  error_handler.py  logging.py
src/api/routes/: __init__.py  analyze.py  health.py  webhook.py
src/application/: __init__.py  orchestrator.py  webhook_handler.py
src/config/: __init__.py  logging.py  settings.py
src/domain/: __init__.py  entities.py  enums.py  exceptions.py  interfaces.py
src/generators/: __init__.py  check_builder.py  comment_builder.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  loader.py  schema.py
src/infrastructure/github/: __init__.py  auth.py  client.py  webhook.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_comment_builder.py  test_pr_scorer.py  test_title_analyzer.py
